# infra

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/: copilot-instructions.md
init-db/: 01-create-glitchtip-db.sh
moltbot/: Dockerfile  app.py  commands.py  config.py  database.py  pyproject.toml  rabbit.py  requirements.txt
moltbot/processors/: backup_manager.py  bill_parser.py
moltbot/src/moltbot/: __init__.py  __main__.py  app.py
moltbot/src/moltbot/commands/: __init__.py  base.py  infra.py  invoices.py
moltbot/src/moltbot/config/: __init__.py  logging.py  settings.py
moltbot/src/moltbot/db/: __init__.py  engine.py
moltbot/src/moltbot/messaging/: __init__.py  rabbit.py
moltbot/src/moltbot/processors/: __init__.py  backup_manager.py  bill_parser.py
moltbot/src/moltbot/utils/: __init__.py  discord_bot.py
moltbot/tests/: conftest.py
moltbot/tests/test_commands/: __init__.py  test_base.py  test_infra.py  test_invoices.py
moltbot/tests/test_config/: test_settings.py
moltbot/tests/test_db/: __init__.py  test_engine.py
moltbot/tests/test_messaging/: __init__.py  test_rabbit.py
moltbot/tests/test_processors/: test_backup_manager.py  test_bill_parser.py
moltbot/tests/test_utils/: test_discord_bot.py
moltbot/utils/: discord_bot.py
n8n-workflows/: Backup_n8n_workflows.json  Bot_request.json  Lector_de_facturas.json  MCP_gatitos.json  Manejador_de_Errores.json  My_workflow.json  RabbitMQ_health_check.json  Send_executions_to_Discord.json
